<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/edit_list"
        android:title="@string/edit_list"
        android:icon="@drawable/ic_edit"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/done"
        android:title="@string/done"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/title_sort"
        android:title="@string/title_sort"
        app:showAsAction="never" />

    <item android:id="@+id/price_sort"
        android:title="@string/price_sort"
        app:showAsAction="never"/>

    <item android:id="@+id/authors_sort"
        android:title="@string/authors_sort"
        app:showAsAction="never"/>

    <item android:id="@+id/publisher_sort"
        android:title="@string/publisher_sort"
        app:showAsAction="never"/>
</menu>