<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/list_item_padding"
    android:elevation="@dimen/list_elevation"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="@dimen/list_radius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/list_item_padding"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/subtitle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/list_item_padding" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/book_image"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/list_img_height"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/summary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/book_image"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/list_item_padding_small"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/list_titles_width"
                        android:layout_height="wrap_content"
                        android:text="@string/price_key"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/price_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/list_item_padding_small"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/list_titles_width"
                        android:layout_height="wrap_content"
                        android:text="@string/isbn13_key"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/isbn13_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/list_item_padding_small"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/list_titles_width"
                        android:layout_height="wrap_content"
                        android:text="@string/url_key"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/url_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/list_item_padding_small"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/list_titles_width"
                        android:layout_height="wrap_content"
                        android:text="@string/authors_key"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/authors_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/list_item_padding_small"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/list_titles_width"
                        android:layout_height="wrap_content"
                        android:text="@string/publisher_key"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/publisher_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/list_item_padding_small"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/list_titles_width"
                        android:layout_height="wrap_content"
                        android:text="@string/language_key"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/language_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/list_item_padding_small"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/list_titles_width"
                        android:layout_height="wrap_content"
                        android:text="@string/isbn10_key"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/isbn10_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/list_item_padding_small"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/list_titles_width"
                        android:layout_height="wrap_content"
                        android:text="@string/pages_key"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/pages_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/list_item_padding_small"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/list_titles_width"
                        android:layout_height="wrap_content"
                        android:text="@string/year_key"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/year_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/list_item_padding_small"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/list_titles_width"
                        android:layout_height="wrap_content"
                        android:text="@string/rating_key"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/rating_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/desc_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/list_item_padding"/>

    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/list_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_remove"
            android:visibility="gone"
            app:backgroundTint="@android:color/holo_red_dark"
            app:fabSize="mini"
            app:layout_anchor="@id/list_frame"
            app:layout_anchorGravity="top|right|end" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.cardview.widget.CardView>